@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-12T16:20:37Z",
-  "count_outdated" : 651,
-  "uniques_outdated" : 371,
-  "count" : 669,
-  "uniques" : 379,
+  "timestamp" : "2022-11-13T01:21:58Z",
+  "count_outdated" : 656,
+  "uniques_outdated" : 373,
+  "count" : 674,
+  "uniques" : 381,
   "clones" : [
-    {
-      "timestamp": "2022-10-29T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 1, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-10-30T00:00:00Z",
       "count": 2,
@@ -49,6 +42,13 @@
     },
     {
       "timestamp": "2022-11-05T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-12T00:00:00Z",
       "count": 4,
       "count_minmax": [ 4, 4 ],
       "uniques": 1,
