@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2022-10-29T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-10-30T00:00:00Z",
       "count": 2,
       "uniques": 1
@@ -34,6 +29,11 @@
     },
     {
       "timestamp": "2022-11-05T00:00:00Z",
+      "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-12T00:00:00Z",
       "count": 4,
       "uniques": 1
     }
